Fix input not showing correctly on firefox when added next to button

--- a/src/less/currencySelect.less
+++ b/src/less/currencySelect.less
@@ -17,6 +17,7 @@
 
 .currencies {
 	width: inherit !important;
+	min-width: 140px;
 
 	.flag-currency-code {
 		position: relative;
